--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@use './scss/' as * ;
+@use './scss/' as *;
 @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap');
 
 *{
@@ -9,7 +9,7 @@
   user-select: none;
 }
 
-html{
+html,body{
   font-size: 100%;
   position: relative;
 }
@@ -38,7 +38,7 @@ iframe {
 }
 
 #root, .App {
-  height: 100vh;
+  height: 100%;
 }
 
 .bg-image {
