--- a/src/App.scss
+++ b/src/App.scss
@@ -93,3 +93,8 @@ iframe {
 .realtive{
   position: relative;
 }
+
+.swiper, .swiper-slide {
+      height: 100%;
+      // @include flex (center, center)
+}
