--- a/src/App.scss
+++ b/src/App.scss
@@ -58,7 +58,7 @@ iframe {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba($color: #000000, $alpha: 0.2);
+    background-color: rgba($color: #000000, $alpha: .3);
   }
 }
 
