--- a/src/App.scss
+++ b/src/App.scss
@@ -1,100 +1,104 @@
-@use "./scss/" as * ;
-@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap');
+@use "./scss/" as *;
 
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-  user-select: none;
+@import url("https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap");
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
 }
 
-html,body{
-  font-size: 100%;
-  position: relative;
-  height: 100%;
+html,
+body {
+    font-size: 100%;
+    position: relative;
+    height: 100%;
 }
 
 body {
-  font-family: $font-family;
-  font-size: 1.2rem;
-  font-weight: 400;
-  line-height: 1.5;
-  background-color: $black;
-  color: $white;
-  overflow: hidden;
+    font-family: $font-family;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    background-color: $black;
+    color: $white;
+    overflow: hidden;
 }
 
-ul,li{
-  list-style-type: none;
+ul,
+li {
+    list-style-type: none;
 }
 
-a{
-  color: unset;
-  text-decoration: none;
+a {
+    color: unset;
+    text-decoration: none;
 }
 
 iframe {
-  border: 0;
+    border: 0;
 }
 
-#root, .App {
-  height: 100%;
+#root,
+.App {
+    height: 100%;
 }
 
 .bg-image {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.overlay{
-  position: relative;
+.overlay {
+    position: relative;
 
-  &::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba($color: #000000, $alpha: .3);
-  }
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: #000000, $alpha: 0.5);
+    }
 }
 
-.main-color{
-  color: $main-color;
+.main-color {
+    color: $main-color;
 }
 
-.second-color{
-  color: $second-color
+.second-color {
+    color: $second-color;
 }
 
 .title {
-  font-weight: 700;
-  span{
-    font-size: 3rem;
-  }
-  h2{
-    font-size: 5rem;
-    line-height: 5rem;
-  }
+    font-weight: 700;
+    span {
+        font-size: 3rem;
+    }
+    h2 {
+        font-size: 5rem;
+        line-height: 5rem;
+    }
 }
 
-.container{
-  max-width: 1670px;
-  margin: auto;
+.container {
+    max-width: 1670px;
+    margin: auto;
 }
 
 .m-t-4 {
-  margin-top: 4rem;
+    margin-top: 4rem;
 }
 
-.realtive{
-  position: relative;
+.relative {
+    position: relative;
 }
 
-.swiper, .swiper-slide {
-      height: 100%;
-      // @include flex (center, center)
+.swiper,
+.swiper-slide {
+    height: 100%;
 }
