damos estilos a welcome

--- a/src/components/home-section/welcome/welcome.scss
+++ b/src/components/home-section/welcome/welcome.scss
@@ -22,4 +22,12 @@
             margin-left: 1rem;
         }
     }
+    &__img{
+        @include flex (flex-end, flex-start);
+          &__slide {
+              height: 900px;
+              width: 900px;
+              overflow: hidden;
+          }
+    }
 }
